examples/test/testpolicy16456.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16456
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key8: value46
      key31: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value10
          key40: value48
          key32: value46
      podSelector:
        matchLabels:
          key10: value4
          key37: value16
          key2: value1
